# Design_BrainModel

./: .gitignore  .gitmodules  AGENT.md  Agent.md  CLAUDE.md  Cargo.toml  DESIGN.md  DesignBrainModel_CI改善仕様書.docx  Makefile  README.md  Rule.md  analyze.json  analyze_fingerprints.py  arch_gen  architecture_benchmark_report.json  architecture_extractor_v2_extended_report.json  architecture_extractor_v2_report.json  build_stats.csv  case1.json  case2.json  case3.json  critical_risk_report.json  dbm_strategy_summary.md  designgraph_explosion_report.json  interactive_design.py  legacy_lowering_inventory.md  memoryspace_verification_report.json  phase2_extended_report.json  phase5_real_system_report.json  phase6_large_scale_report.json  phase6_tug_report.json  phase7_extension_report.json  phase7_real_repository_report.json  phase8_human_evaluation_report.json  report.json  run_app_design.py  runtime.active_transaction.diff  snap.json  task.json  test_execution_log.txt  (+5 more)
apps/arch_gen/: Cargo.toml  README.md
apps/arch_gen/src/: main.rs
apps/arch_gen/src/commands/: chat.rs  evaluate.rs  explain.rs  export.rs  generate.rs  interactive.rs  knowledge_audit.rs  mod.rs  (+5 more)
apps/arch_gen/tests/: integration_test.rs
apps/cli/: Cargo.toml
apps/cli/src/: analyze_ir.rs  app.rs  app_commands_interface.rs  autonomous_execute.rs  autonomous_execute_diagnostics.rs  autonomous_execute_git.rs  autonomous_execute_remote.rs  coding.rs  coding_service_interface.rs  command.rs  command_executor.rs  consistency_engine.rs  control_event.rs  control_executor.rs  controlled_generation.rs  core.rs  dbm.rs  dbm_main.rs  debug.rs  design_cli_main.rs  design_main.rs  execution_foundation.rs  executor.rs  git_guard.rs  github_guard.rs  holographic_memory_observation.rs  input.rs  ir.rs  ir_state.rs  ir_sync.rs  lib.rs  loop.rs  main.rs  memory_admin_main.rs  memory_seed.rs  nl_executor.rs  ops.rs  pareto_eval.rs  phase1_batch.rs  phase1_batch_main.rs  (+23 more)
apps/cli/tests/: architecture_enforcement.rs  benchmark.rs  chat_cli.rs  cli_integration.rs  contract.rs  human_coherence_tests.rs  integration.rs  negative_cases.rs  nightly_exhaustive.rs  planner_multilingual_semantic.rs  planner_semantic_intent.rs  reasoning_engine.rs  regression.rs  resource_release.rs  safety.rs  semantic_ranking_tests.rs  version_architecture.rs
apps/gui/: Cargo.toml
apps/gui/report/: phase_c_baseline.json
apps/gui/src/: app.rs  controller.rs  detail_view.rs  lib.rs  main.rs  persistence.rs  session.rs  state.rs
apps/gui/tests/: integration_tests.rs  persistence_tests.rs  suggest_benchmark.rs
apps/verification_cli/: Cargo.toml
apps/verification_cli/src/: io.rs  main.rs
apps/verification_cli/tests/: cli.rs  determinism_break.rs
apps/viewer_gui/: Cargo.toml
apps/viewer_gui/src/: app.rs  graph_2d.rs  ipc.rs  ir_loader.rs  main.rs  nl_chat.rs  preview.rs  space_3d.rs
crates/ai_context/: Cargo.toml
crates/ai_context/src/: lib.rs
crates/ai_context/tests/: ai_context_determinism.rs  determinism.rs
crates/architecture_evaluator/: Cargo.toml
crates/architecture_evaluator/src/: lib.rs  stable_v03.rs
crates/architecture_evaluator/tests/: behavior_aware_evaluation.rs  evaluation_stability.rs  ir_evaluation.rs  knowledge_pattern_detection.rs  rule_validation.rs  stable_v03_core.rs
crates/code_language_core/: Cargo.toml
crates/code_language_core/src/: legacy.rs  lib.rs  stable_v03.rs
crates/code_language_core/tests/: architecture_compression.rs  cross_language_equivalence.rs  generator_determinism.rs  language_semantics.rs  macro_generic_robustness.rs  phase20_validation.rs  phase4_dynamic_generation.rs  profile_determinism.rs  real_codebase_reconstruction.rs  stable_v03_core.rs
crates/engine/design_search_engine/: Cargo.toml
crates/hybrid_vm/: Cargo.toml
crates/hybrid_vm/src/: lib.rs
crates/hybrid_vm/tests/: human_coherence_tests.rs  semantic_ranking_tests.rs
crates/integration_layer/: Cargo.toml
crates/integration_layer/src/: lib.rs
crates/knowledge_engine/: Cargo.toml
crates/knowledge_engine/src/: lib.rs
crates/knowledge_engine/tests/: index_engine.rs  knowledge_core_integration.rs  knowledge_parsing.rs  knowledge_reasoning_integration.rs  knowledge_retrieval.rs  knowledge_search_impact.rs  knowledge_validation.rs
crates/legacy/codegen_core_old/: Cargo.toml
crates/memory_graph/: Cargo.toml
crates/memory_graph/src/: lib.rs
crates/memory_graph/tests/: memory.rs
crates/memory_space_api/: Cargo.toml
crates/memory_space_api/src/: concept_recall.rs  lib.rs  memory_engine.rs  query.rs
crates/memory_space_phase14/: Cargo.toml
crates/memory_space_phase14/src/: lib.rs  pattern_extractor.rs  pattern_matcher.rs  pattern_store.rs  stable_v03.rs
crates/memory_space_phase14/tests/: pattern_memory.rs  stable_v03_core.rs
crates/phase1_integration_tests/: Cargo.toml
crates/phase1_integration_tests/src/: lib.rs
crates/replay_engine/: Cargo.toml
crates/replay_engine/src/: capture.rs  classify.rs  diff.rs  lib.rs  replay.rs  tests.rs  trace.rs
crates/runtime/runtime_core/: Cargo.toml
crates/runtime/runtime_vm/: Cargo.toml  pipeline.json
crates/search_verification/: Cargo.toml
crates/search_verification/src/: lib.rs
crates/search_verification/tests/: determinism_with_policy.rs  experience_feedback.rs  experience_poisoning.rs  pattern_generalization.rs  policy_sensitivity.rs  policy_stability.rs  search_diversity.rs
rust_ui_poc/: Cargo.toml  README.md
rust_ui_poc/data/: phasec_state.json
rust_ui_poc/rust_ui_poc/logs/: human_override.jsonl
rust_ui_poc/src/: app.rs  event.rs  main.rs  model.rs  tui.rs  view.rs  vm_client.rs
tests/contract/: Cargo.toml  build.rs
tests/contract/tests/: contract.rs
tests/pipeline/: Cargo.toml
tests/pipeline/src/: lib.rs
tests/pipeline/tests/: decision_contract.rs  determinism_pipeline.rs  end_to_end_pipeline.rs  evaluation_contract.rs  explanation_contract.rs  full_wiring_contract.rs  hypothesis_contract.rs  recall_contract.rs  semantic_contract.rs  trace_contract.rs  validation_contract.rs
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+2113 files in other folders)
