[workspace]
members = [
    "crates/code_ir",
    "crates/architecture_reasoner",
    "crates/geometry_engine",
    "crates/architecture_state",
    "crates/architecture_evaluator",
    "crates/code_language_core",
    "crates/concept_engine",
    "crates/concept_field",
    "crates/domain/causal_domain",
    "crates/domain/architecture_domain",
    "crates/domain/design_domain",
    "crates/domain/design_grammar",
    "crates/domain/semantic_domain",
    "crates/engine/design_search_engine",
    "crates/world_model",
    "crates/phase1_integration_tests",
    "crates/search_controller",
    "crates/analysis_tools",
    "crates/agent_core",
    "crates/brain_core",
    "crates/chm",
    "crates/core_types",
    "crates/dhm",
    "crates/field_engine",
    "crates/hybrid_vm",
    "crates/profile",
    "crates/memory_space",
    "crates/memory_graph",
    "crates/search_verification",
    "crates/policy_engine",
    "crates/evaluation_engine",
    "crates/ai_context",
    "crates/memory_store",
    "crates/shm",
    "crates/memory_space_legacy",
    "crates/core/memory_space_core",
    "crates/memory_space_complex",
    "crates/memory_space_recall",
    "crates/memory_space_eval",
    "crates/memory_space_api",
    "crates/memory_space_index",
    "crates/num-complex",
    "crates/runtime/runtime_vm",
    "crates/interface_ui",
    "crates/language_core",
    "crates/language_reasoning",
    "crates/language_dhm",
    "crates/knowledge_engine",
    "crates/knowledge_lifecycle",
    "crates/knowledge_store",
    "crates/meaning_extractor",
    "crates/semantic_dhm",
    "crates/recomposer",
    "crates/design_reasoning",
    "crates/code_generation_core",
    "crates/reasoning_agent",
    "crates/runtime/runtime_core",
    "apps/cli",
    "apps/gui",
    "apps/desktop",
    "apps/server",
    "apps/lsp",
    "crates/core/world_model_core"
]
resolver = "2"

[workspace.dependencies]
code_ir = { path = "crates/code_ir" }
architecture_reasoner = { path = "crates/architecture_reasoner" }
geometry_engine = { path = "crates/geometry_engine" }
architecture_state_v2 = { path = "crates/architecture_state", package = "architecture_state" }
architecture_evaluator_core = { path = "crates/architecture_evaluator", package = "architecture_evaluator" }
code_language_core = { path = "crates/code_language_core" }
concept_engine = { path = "crates/concept_engine" }
concept_field = { path = "crates/concept_field" }
design_search_engine = { path = "crates/engine/design_search_engine" }
search_controller = { path = "crates/search_controller" }
analysis_tools = { path = "crates/analysis_tools" }
agent_core = { path = "crates/agent_core" }
brain_core = { path = "crates/brain_core" }
chm = { path = "crates/chm" }
core_types = { path = "crates/core_types" }
dhm = { path = "crates/dhm" }
field_engine = { path = "crates/field_engine" }
hybrid_vm = { path = "crates/hybrid_vm" }
interface_ui = { path = "crates/interface_ui" }
language_core = { path = "crates/language_core" }
language_reasoning = { path = "crates/language_reasoning" }
memory_store = { path = "crates/memory_store" }
memory_space = { path = "crates/memory_space_legacy" }
memory_space_core = { path = "crates/core/memory_space_core" }
memory_space_complex = { path = "crates/memory_space_complex" }
memory_space_recall = { path = "crates/memory_space_recall" }
memory_space_eval = { path = "crates/memory_space_eval" }
memory_space_api = { path = "crates/memory_space_api" }
memory_space_index = { path = "crates/memory_space_index" }
language_dhm = { path = "crates/language_dhm" }
knowledge_store = { path = "crates/knowledge_store" }
knowledge_engine = { path = "crates/knowledge_engine" }
knowledge_lifecycle = { path = "crates/knowledge_lifecycle" }
meaning_extractor = { path = "crates/meaning_extractor" }
semantic_dhm = { path = "crates/semantic_dhm" }
recomposer = { path = "crates/recomposer" }
design_reasoning = { path = "crates/design_reasoning" }
reasoning_agent = { path = "crates/reasoning_agent" }
runtime_core = { path = "crates/runtime/runtime_core" }
world_model_core = { path = "crates/core/world_model_core" }
design_domain = { path = "crates/domain/design_domain" }
design_grammar = { path = "crates/domain/design_grammar" }
semantic_domain = { path = "crates/domain/semantic_domain" }
world_model = { path = "crates/world_model" }
num-complex = { path = "crates/num-complex" }
profile = { path = "crates/profile" }
memory_space_phase14 = { path = "crates/memory_space" }
policy_engine = { path = "crates/policy_engine" }
search_verification = { path = "crates/search_verification" }
runtime_vm = { path = "crates/runtime/runtime_vm" }
causal_domain = { path = "crates/domain/causal_domain" }
architecture_domain = { path = "crates/domain/architecture_domain" }
shm = { path = "crates/shm" }
evaluation_engine = { path = "crates/evaluation_engine" }
memory_graph = { path = "crates/memory_graph" }
ai_context = { path = "crates/ai_context" }
code_generation_core = { path = "crates/code_generation_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1"
