[workspace]
members = [
    "xtask",
    "crates/architecture_ir",
    "crates/architecture_search",
    "crates/code_ir",
    "crates/architecture_reasoner",
    "crates/geometry_engine",
    "crates/architecture_state",
    "crates/architecture_evaluator",
    "crates/architecture_metrics",
    "crates/architecture_rules",
    "crates/architecture_knowledge",
    "crates/architecture_memory",
    "crates/code_language_core",
    "crates/implementation_core",
    "crates/execution_graph",
    "crates/execution_simulator",
    "crates/system_model",
    "crates/workload_model",
    "crates/performance_model",
    "crates/architecture_behavior",
    "crates/constraint_engine",
    "crates/concept_engine",
    "crates/concept_field",
    "crates/bridge",
    "crates/integration_layer",
    "crates/domain/causal_domain",
    "crates/domain/architecture_domain",
    "crates/domain/design_domain",
    "crates/domain/design_grammar",
    "crates/domain/semantic_domain",
    "crates/engine/design_search_engine",
    "crates/world_model",
    "crates/phase1_integration_tests",
    "crates/search_controller",
    "crates/analysis_tools",
    "crates/agent_core",
    "crates/brain_core",
    "crates/chm",
    "crates/contracts",
    "crates/core_types",
    "crates/dhm",
    "crates/field_engine",
    "crates/hybrid_vm",
    "crates/profile",
    "crates/memory_space_phase14",
    "crates/memory_graph",
    "crates/search_verification",
    "crates/policy_engine",
    "crates/evaluation_engine",
    "crates/ai_context",
    "crates/memory_store",
    "crates/shm",
    "crates/memory_space_legacy",
    "crates/core/memory_space_core",
    "crates/memory_space_complex",
    "crates/memory_space_recall",
    "crates/memory_space_eval",
    "crates/memory_space_api",
    "crates/memory_space_index",
    "crates/num-complex",
    "crates/runtime/runtime_vm",
    "crates/simulation_scheduler",
    "crates/math_reasoning_engine",
    "crates/interface_ui",
    "crates/language_core",
    "crates/language_reasoning",
    "crates/language_dhm",
    "crates/knowledge_engine",
    "crates/knowledge_lifecycle",
    "crates/knowledge_store",
    "crates/meaning_extractor",
    "crates/semantic_dhm",
    "crates/recomposer",
    "crates/unified_design_ir",
    "crates/design_reasoning",
    "crates/code_generation_core",
    "crates/execution_core",
    "crates/execution_stability_core",
    "crates/replay_engine",
    "crates/test_generation_core",
    "crates/tensor_ir",
    "crates/reasoning_agent",
    "crates/runtime/runtime_core",
    "crates/viewer_core",
    "apps/cli",
    "apps/gui",
    "apps/viewer_gui",
    "apps/desktop",
    "apps/server",
    "apps/lsp",
    "apps/verification_cli",
    "apps/agent_runner",
    "crates/core/world_model_core",
    "tests/contract",
    "tests/pipeline",
    "crates/memory_persistence",
    "crates/execution_hardening",
    "crates/strategy_engine"
]
resolver = "2"

[profile.test]
opt-level = 1

[workspace.dependencies]
architecture_ir = { path = "crates/architecture_ir" }
architecture_search = { path = "crates/architecture_search" }
code_ir = { path = "crates/code_ir" }
architecture_reasoner = { path = "crates/architecture_reasoner" }
geometry_engine = { path = "crates/geometry_engine" }
architecture_state_v2 = { path = "crates/architecture_state", package = "architecture_state" }
architecture_evaluator_core = { path = "crates/architecture_evaluator", package = "architecture_evaluator" }
architecture_metrics = { path = "crates/architecture_metrics" }
architecture_rules = { path = "crates/architecture_rules" }
architecture_knowledge = { path = "crates/architecture_knowledge" }
architecture_memory = { path = "crates/architecture_memory" }
code_language_core = { path = "crates/code_language_core" }
implementation_core = { path = "crates/implementation_core" }
execution_graph = { path = "crates/execution_graph" }
execution_simulator = { path = "crates/execution_simulator" }
system_model = { path = "crates/system_model" }
workload_model = { path = "crates/workload_model" }
performance_model = { path = "crates/performance_model" }
architecture_behavior = { path = "crates/architecture_behavior" }
constraint_engine = { path = "crates/constraint_engine" }
concept_engine = { path = "crates/concept_engine" }
concept_field = { path = "crates/concept_field" }
bridge = { path = "crates/bridge" }
integration_layer = { path = "crates/integration_layer" }
design_search_engine = { path = "crates/engine/design_search_engine" }
search_controller = { path = "crates/search_controller" }
analysis_tools = { path = "crates/analysis_tools" }
agent_core = { path = "crates/agent_core" }
brain_core = { path = "crates/brain_core" }
chm = { path = "crates/chm" }
contracts = { path = "crates/contracts" }
core_types = { path = "crates/core_types" }
dhm = { path = "crates/dhm" }
field_engine = { path = "crates/field_engine" }
hybrid_vm = { path = "crates/hybrid_vm" }
interface_ui = { path = "crates/interface_ui" }
language_core = { path = "crates/language_core" }
language_reasoning = { path = "crates/language_reasoning" }
memory_store = { path = "crates/memory_store" }
memory_space = { path = "crates/memory_space_legacy" }
memory_space_core = { path = "crates/core/memory_space_core" }
memory_space_complex = { path = "crates/memory_space_complex" }
memory_space_recall = { path = "crates/memory_space_recall" }
memory_space_eval = { path = "crates/memory_space_eval" }
memory_space_api = { path = "crates/memory_space_api" }
memory_space_index = { path = "crates/memory_space_index" }
language_dhm = { path = "crates/language_dhm" }
knowledge_store = { path = "crates/knowledge_store" }
knowledge_engine = { path = "crates/knowledge_engine" }
knowledge_lifecycle = { path = "crates/knowledge_lifecycle" }
meaning_extractor = { path = "crates/meaning_extractor" }
semantic_dhm = { path = "crates/semantic_dhm" }
recomposer = { path = "crates/recomposer" }
unified_design_ir = { path = "crates/unified_design_ir" }
design_reasoning = { path = "crates/design_reasoning" }
reasoning_agent = { path = "crates/reasoning_agent" }
runtime_core = { path = "crates/runtime/runtime_core" }
viewer_core = { path = "crates/viewer_core" }
design_cli = { path = "apps/cli" }
world_model_core = { path = "crates/core/world_model_core" }
design_domain = { path = "crates/domain/design_domain" }
design_grammar = { path = "crates/domain/design_grammar" }
semantic_domain = { path = "crates/domain/semantic_domain" }
world_model = { path = "crates/world_model" }
num-complex = { path = "crates/num-complex" }
profile = { path = "crates/profile" }
memory_space_phase14 = { path = "crates/memory_space_phase14" }
memory_persistence = { path = "crates/memory_persistence" }
policy_engine = { path = "crates/policy_engine" }
search_verification = { path = "crates/search_verification" }
runtime_vm = { path = "crates/runtime/runtime_vm" }
simulation_scheduler = { path = "crates/simulation_scheduler" }
math_reasoning_engine = { path = "crates/math_reasoning_engine" }
causal_domain = { path = "crates/domain/causal_domain" }
architecture_domain = { path = "crates/domain/architecture_domain" }
shm = { path = "crates/shm" }
evaluation_engine = { path = "crates/evaluation_engine" }
memory_graph = { path = "crates/memory_graph" }
ai_context = { path = "crates/ai_context" }
code_generation_core = { path = "crates/code_generation_core" }
execution_core = { path = "crates/execution_core" }
execution_stability_core = { path = "crates/execution_stability_core" }
execution_hardening = { path = "crates/execution_hardening" }
strategy_engine = { path = "crates/strategy_engine" }
replay_engine = { path = "crates/replay_engine" }
test_generation_core = { path = "crates/test_generation_core" }
tensor_ir = { path = "crates/tensor_ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1"
ratatui = "0.29"
crossterm = "0.28"
