[package]
name = "rust_ui_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# In a real scenario, we might add reqwest or similar for HTTP if Interface Layer was HTTP.
# For now, we keep it minimal as per "Dumb Client" spec.
