[package]
name = "rust_ui_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ratatui = "0.26"
crossterm = "0.27"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0.100"


