[package]
name = "arch_gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arch-gen"
path = "src/main.rs"

[dependencies]
agent_core            = { workspace = true }
architecture_domain   = { path = "../../crates/domain/architecture_domain" }
clap                  = { version = "4", features = ["derive"] }
design_search_engine  = { workspace = true }
runtime_core          = { workspace = true }
runtime_vm            = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
world_model_core      = { workspace = true }

[dev-dependencies]
tempfile = "3"
