[package]
name = "arch_gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arch_gen"
path = "src/main.rs"

[dependencies]
agent_core                = { workspace = true }
architecture_domain       = { path = "../../crates/domain/architecture_domain" }
architecture_evaluator    = { path = "../../crates/architecture_evaluator" }
architecture_reasoner     = { workspace = true }
clap                      = { version = "4", features = ["derive", "env"] }
code_ir                   = { workspace = true }
code_language_core        = { workspace = true }
design_domain             = { path = "../../crates/domain/design_domain" }
design_reasoning          = { workspace = true }
design_search_engine      = { workspace = true }
glob                      = "0.3"
knowledge_store           = { workspace = true }
memory_space_phase14      = { workspace = true }
runtime_core              = { workspace = true }
runtime_vm                = { workspace = true }
reqwest                   = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper                   = "0.24"
serde                     = { workspace = true }
serde_json                = { workspace = true }
world_model_core          = { workspace = true }

[dev-dependencies]
tempfile = "3"
