[package]
name = "design_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "design"
path = "src/design_main.rs"

[dependencies]
design_reasoning = { workspace = true }
hybrid_vm = { workspace = true }
semantic_dhm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
