[package]
name = "design_cli"
version = "0.1.0"
edition = "2024"
default-run = "dbm"

[features]
ci-heavy = []
contract_strict = []
integration-late = []

[[bin]]
name = "dbm"
path = "src/main.rs"

[[bin]]
name = "design_cli"
path = "src/design_cli_main.rs"

[[bin]]
name = "verify_cli"
path = "src/verify_cli_main.rs"

[dependencies]
analysis_tools = { workspace = true }
agent_core = { workspace = true }
anyhow = "1"
bridge = { workspace = true }
clap = { version = "4", features = ["derive"] }
design_reasoning = { workspace = true }
design_search_engine = { workspace = true }
hybrid_vm = { workspace = true }
integration_layer = { workspace = true }
language_core = { workspace = true }
language_reasoning = { workspace = true }
code_language_core = { workspace = true }
unified_design_ir = { workspace = true }
runtime_vm = { workspace = true }
runtime_core = { workspace = true }
viewer_core = { workspace = true }
memory_space_phase14 = { workspace = true }
semantic_dhm = { workspace = true }
strategy_engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
fs_extra = "1.3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
wait-timeout = "0.2"
memory_persistence = { workspace = true }
memory_space_core = { workspace = true }
world_model_core = { workspace = true }
crossterm = { workspace = true }
ctrlc = "3.4"
ratatui = { workspace = true }
serde_yaml = "0.9"
tempfile = "3"
log = "0.4"
syn = { version = "2", features = ["full", "visit"] }
