[package]
name = "design_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
hybrid_vm = { workspace = true }
design_reasoning = { workspace = true }
semantic_dhm = { workspace = true }
core_types = { workspace = true }
agent_core = { workspace = true }
sha2 = "0.10"

[build-dependencies]
# GUI固有のビルド設定が必要な場合
