[package]
name = "code_language_core"
version = "0.1.0"
edition = "2024"

[dependencies]
architecture_reasoner = { workspace = true }
code_ir = { workspace = true }
design_domain = { workspace = true }
memory_engine = { workspace = true }
memory_space_phase14 = { workspace = true }
unified_design_ir = { workspace = true }

[dev-dependencies]
architecture_ir = { workspace = true }
