[package]
name = "integration_layer"
version = "0.1.0"
edition = "2024"

[dependencies]
architecture_ir = { workspace = true }
code_language_core = { workspace = true }
contracts = { workspace = true }
serde = { workspace = true }
unified_design_ir = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
