[package]
name = "knowledge_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
design_domain = { workspace = true }
knowledge_store = { workspace = true }
language_core = { workspace = true }
memory_engine = { workspace = true }
world_model = { workspace = true }
world_model_core = { workspace = true }
