[package]
name = "memory_space_api"
version = "0.1.0"
edition = "2024"

[dependencies]
concept_engine = { workspace = true }
memory_space_core = { workspace = true }
memory_space_complex = { workspace = true }
memory_space_recall = { workspace = true }
memory_space_eval = { workspace = true }
memory_space_index = { workspace = true }
