[package]
name = "design_search_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
concept_engine = { workspace = true }
design_domain = { workspace = true }
design_grammar = { workspace = true }
memory_space_complex = { workspace = true }
memory_space_core = { workspace = true }
world_model = { workspace = true }
world_model_core = { workspace = true }
